[tool.poetry]
name = "python-assignment"
version = "0.1.0"
description = ""
authors = ["SIEW_SENG_YIP <SIEW_SENG_YIP@DELL.COM>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.0"
flask-migrate = "^2.5.2"
psycopg2 = "^2.8.3"
marshmallow-sqlalchemy = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
